# rotapool

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/rotapool/: __init__.py  exceptions.py  models.py  pool.py
tests/: test_pool.py  test_pool_awaitable.py  test_pool_coroutine.py  test_pool_future.py
