[project]
name = "rotapool"
version = "0.1.1"
description = "Generic async resource pool with rotation, cooldown, and retry"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "zydo" }]
keywords = [
    "async",
    "pool",
    "rotation",
    "rate-limit",
    "retry",
    "resource-management",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "agent-readable==0.1.0",
]

[project.urls]
Source = "https://github.com/zydo/rotapool"
Issues = "https://github.com/zydo/rotapool/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rotapool"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider --cov=rotapool --cov-report=term-missing"

[tool.coverage.run]
source = ["rotapool"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
reportUnusedFunction = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=26.3.1",
    "pyright>=1.1.409",
]
